# OperatorBoard

./: .gitignore  CLAUDE.md  README.md  SPEC.md  TEST_RESULTS_20260325.md  run_agent.bat  start_operator_agent.py
src/agent-framework/: pyproject.toml
src/agent-framework/configs/: agent.yaml  mcp.yaml  rag_loaders.yaml  tools.yaml
src/agent-framework/src/agent_framework/: __init__.py
src/agent-framework/src/agent_framework/api/: __init__.py  errors.py  models.py  server.py
src/agent-framework/src/agent_framework/config/: loader.py  settings.py
src/agent-framework/src/agent_framework/core/: types.py
src/agent-framework/src/agent_framework/llm/: __init__.py  client.py
src/agent-framework/src/agent_framework/mcp/: __init__.py  client.py  protocol.py  server.py
src/agent-framework/src/agent_framework/rag/: __init__.py  embeddings.py  retriever.py  service.py  vectorstore.py
src/agent-framework/src/agent_framework/skills/: __init__.py  executor.py
src/agent-framework/src/agent_framework/tools/: __init__.py  base.py  manager.py  registry.py
src/agent-framework/src/agent_framework/utils/: __init__.py
src/agent-framework/tests/: test_integration.py  test_loaders.py  test_mcp.py  test_rag.py  test_skills.py  test_system.py
src/auth-agent/: init_admin.py  pyproject.toml
src/auth-agent/configs/: defaults.yaml
src/auth-agent/migrations/: V1__add_role_inheritance.sql  V2__add_data_scope.sql  V3__add_audit_log.sql  add_approval_fields.sql  run_migrations.py
src/auth-agent/src/auth_agent/: __init__.py
src/auth-agent/src/auth_agent/api/: __init__.py  audit.py  auth.py  chat_routes.py  data_scope.py  decorators.py  dependencies.py  middleware.py  models.py  permission_cache.py  schemas.py  server.py  service.py
src/operator-agent/: pyproject.toml
src/operator-agent/configs/: defaults.yaml  intent_detection.yaml  operator_aliases.yaml  tools.yaml
src/operator-agent/src/operator_agent/: __init__.py  operator_agent.py
src/operator-agent/src/operator_agent/api/: __init__.py  auth.py  errors.py  server.py
src/operator-agent/src/operator_agent/capabilities/: __init__.py
src/operator-agent/src/operator_agent/config/: __init__.py  operator_config.py
src/operator-agent/src/operator_agent/examples/: __init__.py  (+1 more)
src/operator-agent/tests/: test_operator_mapping.py
(+408 files in other folders)
